[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/fonts/propaganda/PROPAGAN.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/textures/Bricks.jpg" type="Texture" id=2]
[ext_resource path="res://assets/models/props/robot/robot.dae" type="PackedScene" id=3]
[ext_resource path="res://assets/models/props/crate/crate.dae" type="PackedScene" id=4]
[ext_resource path="res://src/levels/main_menu.gd" type="Script" id=5]
[ext_resource path="res://assets/models/levels/level2/Ground.material" type="Material" id=6]
[ext_resource path="res://src/instance/SettingsMenu.tscn" type="PackedScene" id=7]

[sub_resource type="SpatialMaterial" id=29]
resource_name = "Bricks"
albedo_texture = ExtResource( 2 )
metallic_specular = 0.0
uv1_scale = Vector3( 10, 10, 1 )

[sub_resource type="PlaneMesh" id=3]
material = SubResource( 29 )
size = Vector2( 20, 20 )

[sub_resource type="PlaneMesh" id=30]
material = ExtResource( 6 )
size = Vector2( 20, 20 )

[sub_resource type="PanoramaSky" id=26]
radiance_size = 4
panorama = ExtResource( 2 )

[sub_resource type="Environment" id=27]
background_mode = 2
background_sky = SubResource( 26 )
background_color = Color( 1, 0.156863, 0.156863, 1 )
background_energy = 2.98
ambient_light_color = Color( 0.984314, 0.662745, 0.662745, 1 )
ambient_light_energy = 2.65
fog_enabled = true
fog_color = Color( 0.701961, 0.501961, 0.501961, 1 )
fog_depth_begin = 12.0
fog_depth_end = 50.0
fog_depth_curve = 2.82843
tonemap_mode = 2
dof_blur_far_distance = 25.0
dof_blur_far_quality = 2
dof_blur_near_enabled = true
dof_blur_near_distance = 1.0
dof_blur_near_amount = 0.2
dof_blur_near_quality = 2
glow_enabled = true
glow_strength = 1.3
glow_bloom = 0.02
adjustment_enabled = true
adjustment_brightness = 0.9
adjustment_contrast = 1.1
adjustment_saturation = 0.7

[sub_resource type="Animation" id=31]
resource_name = "close_settings"
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.1, 0.1 ),
"update": 0,
"values": [ Vector3( 1, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.1, 0.1 ),
"update": 0,
"values": [ Vector3( 0, -45, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.1, 0.1 ),
"update": 0,
"values": [ -1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HBoxContainer:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.1, 0.1 ),
"update": 0,
"values": [ 1.0, 2.0 ]
}

[sub_resource type="Animation" id=28]
resource_name = "open_settings"
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 1, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -45, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.1, 1 ),
"update": 0,
"values": [ 0.0, -1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HBoxContainer:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.1, 1 ),
"update": 0,
"values": [ 2.0, 1.0 ]
}

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="."]
current = true
fov = 48.6

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -4 )
mesh = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, 8, 0, -1 )
mesh = SubResource( 3 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1.91069e-15, 0, -1, 4.37114e-08, 1, 0, 1, -4.37114e-08, 1.91069e-15, -2, -2.5, -1 )
mesh = SubResource( 30 )

[node name="crate" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.63997, -1.33659, -2.72647 )

[node name="crate3" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.36003, -1.33659, -2.72647 )

[node name="crate2" parent="." instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.63997, 0.663407, -2.72647 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 27 )

[node name="robot" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.393727, -1.67465, -1.25486 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close_settings = SubResource( 31 )
anims/open_settings = SubResource( 28 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 2.0
anchor_bottom = 1.0

[node name="Main" type="Control" parent="HBoxContainer"]
margin_right = 1918.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Main"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9
margin_left = -0.320068

[node name="Title" type="Label" parent="HBoxContainer/Main/VBoxContainer"]
margin_right = 863.0
margin_bottom = 546.0
grow_horizontal = 2
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "robot"
align = 1

[node name="PlayButton" type="Button" parent="HBoxContainer/Main/VBoxContainer"]
unique_name_in_owner = true
margin_top = 550.0
margin_right = 863.0
margin_bottom = 652.0
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="SettingsButton" type="Button" parent="HBoxContainer/Main/VBoxContainer"]
margin_top = 656.0
margin_right = 863.0
margin_bottom = 758.0
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="ExitButton" type="Button" parent="HBoxContainer/Main/VBoxContainer"]
margin_top = 762.0
margin_right = 863.0
margin_bottom = 864.0
custom_fonts/font = SubResource( 2 )
text = "Exit"

[node name="SettingsMenu" parent="HBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1922.0
margin_right = 3840.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/Main/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Main/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Main/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="back_pressed" from="HBoxContainer/SettingsMenu" to="." method="_on_SettingsMenu_back_pressed"]
